--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,76 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-asn1crypto=0.24.0=py_1
-attrs=18.1.0=py_1
-automat=0.7.0=py36_0
-backcall=0.1.0=py_0
-backports=1.0=py36_1
-backports.functools_lru_cache=1.5=py_1
-bleach=2.1.3=py_0
-ca-certificates=2018.4.16=0
-cartopy=0.16.0=py36_0
-certifi=2018.4.16=py36_0
-cffi=1.11.5=py36_0
-chardet=3.0.4=py36_2
-constantly=15.1.0=py_0
-cryptography=2.2.1=py36_0
-cycler=0.10.0=py_1
-dbus=1.11.0=0
-decorator=4.3.0=py_0
-django=2.1=py36_0
-entrypoints=0.2.3=py36_1
-expat=2.2.5=0
-fontconfig=2.12.1=4
-freetype=2.7=1
-geos=3.6.2=1
-gettext=0.19.8.1=0
-glib=2.53.5=1
-gmp=6.1.2=0
-gst-plugins-base=1.8.0=0
-gstreamer=1.8.0=1
-html5lib=1.0.1=py_0
-hyperlink=17.3.1=py_0
-icu=58.2=0
-idna=2.7=py36_2
-incremental=17.5.0=py_0
-ipykernel=4.8.2=py36_0
-ipython=6.5.0=py36_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.3.2=py_0
-jedi=0.12.1=py36_0
-jinja2=2.10=py_1
-jpeg=9b=2
-jsonschema=2.6.0=py36_1
-jupyter_client=5.2.3=py_1
-jupyter_console=5.2.0=py36_0
-jupyter_core=4.4.0=py_0
-libffi=3.2.1=3
-libgcc=5.2.0=0
-libgfortran=3.0.0=1
-libiconv=1.14=4
-libpng=1.6.34=0
-libsodium=1.0.16=0
-libtiff=4.0.9=0
-libxcb=1.13=0
-libxml2=2.9.5=1
-libxslt=1.1.32=0
-lxml=4.2.2=py36_0
-markupsafe=1.0=py36_0
-matplotlib=2.1.0=py36_0
-mistune=0.8.3=py36_1
-mkl=2017.0.3=0
-nbconvert=5.3.1=py_1
-nbformat=4.4.0=py_1
-ncurses=5.9=10
-notebook=5.6.0=py36_0
-numpy=1.13.1=py36_0
-olefile=0.45.1=py_1
-openssl=1.0.2o=0
-owslib=0.16.0=py_0
-pandoc=2.2.2=1
-pandocfilters=1.4.2=py_1
-parso=0.3.1=py_0
-pcre=8.41=1
-pexpect=4.6.0=py36_0
-pickleshare=0.7.4=py36_0
-pillow=4.2.1=py36_0
-pip=18.0=py36_1
-proj4=4.9.3=5
-prometheus_client=0.3.0=py_0
-prompt_toolkit=1.0.15=py36_0
-ptyprocess=0.6.0=py36_0
-pycparser=2.18=py_1
-pyepsg=0.3.2=py_1
-pygments=2.2.0=py_1
-pyopenssl=18.0.0=py36_0
-pyparsing=2.2.0=py_1
-pyproj=1.9.5.1=py36_0
-pyqt=5.6.0=py36_5
-pyshp=1.2.12=py_0
-pysocks=1.6.8=py36_1
-python=3.6.3=1
-python-dateutil=2.7.3=py_0
-pytz=2018.5=py_0
-pyzmq=17.0.0=py36_4
-qt=5.6.2=3
-qtconsole=4.3.1=py36_0
-readline=6.2=0
-requests=2.19.1=py36_1
-scipy=0.19.1=np113py36_0
-send2trash=1.5.0=py_0
-setuptools=40.0.0=py36_1
-shapely=1.6.4=py36_0
-simplegeneric=0.8.1=py_1
-sip=4.18=py36_1
-six=1.11.0=py36_1
-sqlite=3.13.0=1
-terminado=0.8.1=py36_0
-testpath=0.3.1=py36_0
-tk=8.5.19=2
-tornado=5.1=py36_0
-traitlets=4.3.2=py36_0
-twisted=17.5.0=py36_0
-urllib3=1.23=py36_0
-wcwidth=0.1.7=py_1
-webencodings=0.5=py36_0
-wheel=0.31.1=py36_1
-widgetsnbextension=3.3.1=py36_1
-xorg-libxau=1.0.8=3
-xorg-libxdmcp=1.1.2=3
-xz=5.2.3=0
-zeromq=4.2.5=2
-zlib=1.2.11=0
-zope=1.0=py36_0
-zope.interface=4.4.2=py36_0
+asn1crypto==0.24.0
+attrs==18.1.0
+Automat==0.0.0
+backcall==0.1.0
+backports.functools-lru-cache==1.5
+bleach==2.1.3
+Cartopy==0.16.0
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+constantly==15.1.0
+cryptography==2.2.1
+cycler==0.10.0
+decorator==4.3.0
+Django==2.1
+entrypoints==0.2.3
+html5lib==1.0.1
+hyperlink==17.3.1
+idna==2.7
+incremental==17.5.0
+ipykernel==4.8.2
+ipython==6.5.0
+ipython-genutils==0.2.0
+ipywidgets==7.3.2
+jedi==0.12.1
+Jinja2==2.10
+jsonschema==2.6.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+lxml==4.2.2
+MarkupSafe==1.0
+matplotlib==2.1.0
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.6.0
+numpy==1.13.1
+olefile==0.45.1
+OWSLib==0.16.0
+pandocfilters==1.4.2
+parso==0.3.1
+pexpect==4.6.0
+pickleshare==0.7.4
+Pillow==4.2.1
+prometheus-client==0.3.0
+prompt-toolkit==1.0.15
+ptyprocess==0.6.0
+pycparser==2.18
+pyepsg==0.3.2
+Pygments==2.2.0
+pyOpenSSL==18.0.0
+pyparsing==2.2.0
+pyproj==1.9.5.1
+pyshp==1.2.12
+PySocks==1.6.8
+python-dateutil==2.7.3
+pytz==2018.5
+pyzmq==17.0.0
+qtconsole==4.3.1
+requests==2.19.1
+scipy==0.19.1
+Send2Trash==1.5.0
+Shapely==1.6.4.post1
+simplegeneric==0.8.1
+six==1.11.0
+terminado==0.8.1
+testpath==0.3.1
+tornado==5.1
+traitlets==4.3.2
+Twisted==17.5.0
+urllib3==1.23
+wcwidth==0.1.7
+webencodings==0.5
+widgetsnbextension==3.3.1
+zope.interface==4.4.2
