--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asn1crypto==0.24.0
 attrs==18.1.0
-Automat==0.7.0
+Automat==0.0.0
 backcall==0.1.0
 backports.functools-lru-cache==1.5
 bleach==2.1.3
@@ -11,6 +11,7 @@ chardet==3.0.4
 constantly==15.1.0
 cryptography==2.2.1
 cycler==0.10.0
+Cython==0.28.5
 decorator==4.3.0
 Django==2.1
 entrypoints==0.2.3
