--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,11 @@ cryptography==2.2.1
 cycler==0.10.0
 Cython==0.28.5
 decorator==4.3.0
+dj-database-url==0.5.0
 Django==2.1
+django-heroku==0.3.1
 entrypoints==0.2.3
+gunicorn==19.9.0
 html5lib==1.0.1
 hyperlink==17.3.1
 idna==2.7
@@ -40,6 +43,7 @@ pickleshare==0.7.4
 Pillow==4.2.1
 prometheus-client==0.3.0
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptyprocess==0.6.0
 pycparser==2.18
 pyepsg==0.3.2
@@ -66,4 +70,5 @@ Twisted==17.5.0
 urllib3==1.23
 wcwidth==0.1.7
 webencodings==0.5
+whitenoise==3.3.1
 zope.interface==4.4.2
